--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/favicon.ico"
+        type="image/x-icon">
     <title>Portifólio Éverton cordeiro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -59,26 +60,24 @@
                 class="d-flex flex-row mb-3 d-flex align-items-center d-flex justify-content-center d-flex justify-content-around">
                 <div class="p-2 ">
                     <h1 id="primeiroTitulo">
-                        Portifólio <br> Éverton Cordeiro
+                        Portifólio <br> de <br> Éverton Cordeiro
                     </h1>
-                    <div  class="d-flex justify-content-center">
+                    <div class="d-flex justify-content-center">
                         <p>DEV Junior em formação</p>
                     </div>
                 </div>
                 <div class="p-2">
-                    <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/dev02.png" alt="" id="img_home">
+                    <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/dev02.png" alt=""
+                        id="img_home">
                 </div>
             </div>
         </section>
 
         <section class="pagina" id="bio">
-            <div class="d-flex p-  d-flex justify-content-center " id="titulo_sobre">
-                Sobre mim
-            </div>
-
             <div class="d-flex flex-row mb-3  d-flex justify-content-evenly">
                 <div class="p-2">
-                    <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/perfil.png" alt="Foto perfil" id="img_perfil">
+                    <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/perfil.png"
+                        alt="Foto perfil" id="img_perfil">
                 </div>
                 <div class="p-2">
                     <div class="carousel slide carousel-fade">
@@ -94,60 +93,37 @@
                             <div class="p-2 d-block w-100">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <h3> Titulo</h3>
+                                        <h3> Sobre mim</h3>
                                         <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, dolorem
-                                            iusto! Est nulla praesentium saepe pariatur expedita odio architecto,
-                                            aperiam dolore, quasi quaerat assumenda magni nisi nobis cumque suscipit
-                                            delectus.
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet similique
-                                            optio quos tenetur, alias corrupti atque commodi cumque iusto? Corporis
-                                            omnis aspernatur temporibus aperiam libero mollitia aliquid reiciendis vitae
-                                            hic?
+                                            Sou uma pessoa que adora tecnologia desde que era mais novo, desde que
+                                            ganhei meu primeiro computador eu tirei como Hobby, lidar com "questões da
+                                            informática" como formatar meu computador e de amigos, instalar sistemas
+                                            modificados para deixar o computador personalizado e afins. E chegou um
+                                            momento que eu desci aprender como funcionam as paginas da internet e
+                                            conheci o Devtools do Google, ferramenta que me apresentou as tecnologias
+                                            HTML, CSS e JavaScript, tais quais eu utilizei para pregar "peças" em
+                                            amigos, mudando meu saldo em jogos no computador ou fingindo ter "hackeado"
+                                            alguma pagina da web. E foi por brincadeiras assim que acabei cada vez mais
+                                            me maravilhando com o que eu poderia fazer com tais tecnologias e desci
+                                            estudar de verdade programação, mas comecei com a linguagem Python mas que
+                                            desistir de continuar as aulas por não conseguir fazer "o que eu queria"
+                                            coisa que hoje eu faço graças as ferramentas de desenvolvimento web.
                                         </p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h3> Titulo</h3>
+                                        <h3> Minhas hard Skills e Soft Skills </h3>
                                         <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, dolorem
-                                            iusto! Est nulla praesentium saepe pariatur expedita odio architecto,
-                                            aperiam dolore, quasi quaerat assumenda magni nisi nobis cumque suscipit
-                                            delectus.
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet similique
-                                            optio quos tenetur, alias corrupti atque commodi cumque iusto? Corporis
-                                            omnis aspernatur temporibus aperiam libero mollitia aliquid reiciendis vitae
-                                            hic?
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis porro esse
-                                            hic blanditiis nesciunt ea laboriosam expedita ullam, cumque vero magnam
-                                            fugit deserunt amet illo sapiente saepe suscipit temporibus modi!
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quo laborum
-                                            doloremque? Cumque, nobis magnam nostrum architecto perferendis deleniti.
-                                            Placeat quam enim nobis. Libero eveniet ratione expedita modi voluptatum
-                                            iure.
+                                            Como minhas principais habilidades, as que gosto de destacar são meu conhecimento em inglês, no qual não sou fluente mas tenho uma boa comunicação e leitura, meu conhecimento nas ferramentas photoshop e premier da adobe e nos dias atuais meu conhecimento recém adquirido em HTML, CSS e JavaScript onde meu forte está sendo as duas primeiras linguagens. E como Soft skills acredito que o que mais se destaca em mim são minha facilidade de aprendizado e comunicação em grupo. 
                                         </p>
                                     </div>
                                     <div class="carousel-item">
-                                        <h3> Titulo</h3>
+                                        <h3> Mais um pouco sobre mim </h3>
                                         <p>
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quo laborum
-                                            doloremque? Cumque, nobis magnam nostrum architecto perferendis deleniti.
-                                            Placeat quam enim nobis. Libero eveniet ratione expedita modi voluptatum
-                                            iure.
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae, dolorem
-                                            iusto! Est nulla praesentium saepe pariatur expedita odio architecto,
-                                            aperiam dolore, quasi quaerat assumenda magni nisi nobis cumque suscipit
-                                            delectus.
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet similique
-                                            optio quos tenetur, alias corrupti atque commodi cumque iusto? Corporis
-                                            omnis aspernatur temporibus aperiam libero mollitia aliquid reiciendis vitae
-                                            hic?
-                                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facilis porro esse
-                                            hic blanditiis nesciunt ea laboriosam expedita ullam, cumque vero magnam
-                                            fugit deserunt amet illo sapiente saepe suscipit temporibus modi!
-                                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam quo laborum
-                                            doloremque? Cumque, nobis magnam nostrum architecto perferendis deleniti.
-                                            Placeat quam enim nobis. Libero eveniet ratione expedita modi voluptatum
-                                            iure.
+                                            Meu jogo favorito:  Fortnite.  <br>
+                                            Minha série favorita:  Game of thrones. <br>
+                                            Meu esporte favorito:   Jiu jitsu. <br>
+                                            Bebida favorita não alcoólica: Refrigerante sabor Guaraná. <br>
+                                            Bebida favorita alcoólica: Jack Daniels de Maça verde.
                                         </p>
                                     </div>
                                 </div>
@@ -174,9 +150,11 @@
                 <div class="p-2 d-flex justify-content-around ">
                     <div style="width: 600px;">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus autem aperiam vel, veritatis
-                            mollitia, in alias odit totam magni cumque saepe assumenda, a dolore! Reprehenderit, magnam?
-                            Delectus voluptatum nam nemo?
+                            Aqui estão alguns projetos feitos por mim enquanto eu acompanhava algumas aulas, e também
+                            alguns projetos pessoais.
+                            As tecnologia empregadas nos projetos são: <abbr
+                                title="hypertext markup language">HTML</abbr>,<abbr
+                                title="cascading style sheets">CSS</abbr> e <abbr title="javaScript">JS</abbr>.
                         </p>
                     </div>
 
@@ -185,39 +163,48 @@
                     <div class="d-flex flex-row mb-3">
                         <div class="p-2">
                             <div class="card" style="width: 18rem;">
-                                <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/calc.jpg" class="card-img-top" alt="...">
+                                <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/calc.jpg"
+                                    class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title" style="color: black;">Calculadora simples</h5>
-                                    <p class="card-text" style="color: black;"> 
-                                        Este projeto foi iniciado quando eu estava assistindo a um tutorial no Youtube e após o termino do video fiz algumas alterações visuais utilizando meu conhecimento com a tecnologia CSS.
+                                    <p class="card-text" style="color: black;">
+                                        Este projeto foi iniciado quando eu estava assistindo a um tutorial no Youtube e
+                                        após o termino do vídeo fiz algumas alterações visuais utilizando meu
+                                        conhecimento com a tecnologia CSS.
                                     </p>
-                                    <a href="" class="btn btn-primary">Ver o projeto</a>
+                                    <a href="https://minhacalculadorav2.netlify.app/" target="_blank"
+                                        class="btn btn-primary">Ver o projeto</a>
                                 </div>
                             </div>
                         </div>
                         <div class="p-2">
                             <div class="card" style="width: 18rem;">
-                                <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/lp.jpg" class="card-img-top" alt="...">
+                                <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/lp.jpg"
+                                    class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title" style="color: black;">Lading Page</h5>
                                     <p class="card-text" style="color: black;">
-                                        Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.
+                                        Projeto feito durante uma live de um canal no Youtube, que abordou como criar
+                                        sites responsivos com a utilização do @media no arquivo .CSS.
                                     </p>
-                                    <a href="https://ladingpageresponsive.netlify.app/" class="btn btn-primary">Ver o projeto</a>
+                                    <a href="https://ladingpageresponsive.netlify.app/" target="_blank"
+                                        class="btn btn-primary">Ver o projeto</a>
                                 </div>
                             </div>
                         </div>
                         <div class="p-2">
                             <div class="card" style="width: 18rem;">
-                                <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/crono.png" class="card-img-top" alt="...">
+                                <img src="https://raw.githubusercontent.com/EvertonCordeiro1994/protifolio/main/crono.png"
+                                    class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title" style="color: black;">Cronômetro simples</h5>
-                                    <p class="card-text" style="color: black;"style="color: black;">
-                                        Some quick example text to build on the card title and make up
-                                        the bulk of the card's content.
+                                    <p class="card-text" style="color: black;" style="color: black;">
+                                        Com esse projeto foi possível que eu aplicasse o que aprendi em algumas vídeos
+                                        aulas sobre JavaScript. E além do Js pude colocar em prática o uso do framework
+                                        bootstrap.
                                     </p>
-                                    <a href="https://cronometrosimples.netlify.app/" target="_blank" class="btn btn-primary">Ver o projetore</a>
+                                    <a href="https://cronometrosimples.netlify.app/" target="_blank"
+                                        class="btn btn-primary">Ver o projetore</a>
                                 </div>
                             </div>
                         </div>
@@ -237,16 +224,24 @@
                 <div class="p-2 d-flex justify-content-center">
                     <div class="d-flex flex-row mb-3">
                         <div class="p-2">
-                            <iconify-icon inline icon="akar-icons:linkedin-box-fill" style="color: white;" width="50"></iconify-icon>
-                            <h5>Linkedin</h5>
+                            <a href="https://www.linkedin.com/in/everton-cordeiro-28361a235" target="_blank" style="text-decoration: none;">
+                                <iconify-icon inline icon="akar-icons:linkedin-box-fill" style="color: white;" width="50">
+                                </iconify-icon>
+                                <h5>Linkedin</h5>
+                            </a>
                         </div>
                         <div class="p-2">
-                            <iconify-icon inline icon="akar-icons:github-fill" style="color: white;" width="50"></iconify-icon>
-                            <h5>Github</h5>
+                            <a href="https://github.com/EvertonCordeiro1994" target="_blank" style="text-decoration: none;">
+                                <iconify-icon inline icon="akar-icons:github-fill" style="color: white;" width="50">
+                                </iconify-icon>
+                                <h5>Github</h5>
+                            </a>
                         </div>
                         <div class="p-2">
-                            <iconify-icon inline icon="carbon:email" style="color: white;" width="50"></iconify-icon>
-                            <h5>Email</h5>
+                            <a href="mailto:evertoncordeiro@icloud.com" style="text-decoration: none;">
+                                <iconify-icon inline icon="carbon:email" style="color: white;" width="50"></iconify-icon>
+                                <h5>Email</h5>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -255,9 +250,9 @@
         </section>
     </main>
 
-    <footer >
+    <footer>
         <div class="d-flex flex-column mb-3 text-center">
-            <h6 >by Éverton Cordeiro</h6>
+            <h6>by Éverton Cordeiro</h6>
         </div>
     </footer>
 
