--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
                             </div>
                             <div class="p-2 d-block w-100">
                                 <div class="carousel-inner">
-                                    <div class="carousel-item carrosselItem  active">
+                                    <div class="carousel-item carrosselItem  active" id="paragrafoSobre01">
                                         <h3> Sobre mim</h3>
-                                        <p>
+                                        <p >
                                             Sou uma pessoa que adora tecnologia desde pequeno, desde que
                                             ganhei meu primeiro computador, se tornou um Hobby, lidar com "questões da
                                             informática". E chegou um momento que eu desci aprender como funcionam as
@@ -340,7 +340,7 @@
             <div class="d-flex flex-column mb-3 text-center">
                 <div class="p-2">
                     <h1>Quer saber mais um pouco sobre mim ?</h1>
-                    <h3>Entre em contato através dos canais abaixo:</h3>
+                    <h3 id="h3contato">Entre em contato através dos canais abaixo:</h3>
 
                 </div>
                 <div class="p-2 d-flex justify-content-center">
