--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                 <div class="p-2">
                     <h1>Meus Projetos</h1>
                 </div>
-                <div class="p-2 id=" id="text_projeto">
-                    <div>
+                <div class="p-2 id=" >
+                    <div id="text_projeto">
                         <p id="p_projeto">
                             Aqui estão alguns projetos feitos por mim enquanto eu acompanhava algumas aulas, e também
                             alguns projetos pessoais.
