--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                                             graças as ferramentas de desenvolvimento web.
                                         </p>
                                     </div>
-                                    <div class="carousel-item carrosselItem">
+                                    <div class="carousel-item carrosselItem" id="paragrafoSobre02">
                                         <h3> Minhas hard Skills e Soft Skills </h3>
                                         <p>
                                             Como minhas principais habilidades, as que gosto de destacar são meu
