--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                                             de aprendizado e comunicação em grupo.
                                         </p>
                                     </div>
-                                    <div class="carousel-item carrosselItem">
+                                    <div class="carousel-item carrosselItem" id="paragrafoSobre03">
                                         <h3> Mais um pouco sobre mim </h3>
                                         <p>
                                             Meu jogo favorito: Fortnite. <br>
