--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
                 </div>
                 <div id="container-btn">
-                    <button type="button" class="btn btn-dark">Warning</button>
-                    <button type="button" class="btn btn-dark">Warning</button>
+                    <button id="btn-cv" type="button" class="btn btn-dark">Currículo </button>
+                    <button id="btn-wpp" type="button" class="btn btn-dark">Whatsapp</button>
                 </div>
             </article>
         </section>
