--- a/index.html
+++ b/index.html
@@ -76,17 +76,15 @@
 
                 </div>
                 <div id="container-btn">
-                    <button id="btn-cv" type="button" class="btn btn-dark">Currículo </button>
-                    <button id="btn-wpp" type="button" class="btn btn-dark">Whatsapp</button>
+                    <button id="btn-cv" type="button" class="btn btn-dark"><a href="docs/Curriculo-Everton-Cordeiro.pdf" target="_blank" download="Currículo de Éverton Cordeiro">Currículo</a></button>
+                    <button id="btn-wpp" type="button" class="btn btn-dark"><a href="https://whatsa.me/5551992075630/?t=Ol%C3%A1,%20vamos%20conversar%20sobre%20seu%20portf%C3%B3lio?" target="_blank">Whatsapp</a></button>
                 </div>
             </article>
         </section>
     </main>
-
-
-
-
-
+    <footer>
+        <p>code by Éverton Cordeiro</p>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous">
     </script>
